Fix Safari bug where .reminder was overflowing from its wrapper

--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,10 @@ main {
       main .map-inputs-wrapper .lower-button-wrapper span {
         font-size: .98em;
         position: absolute;
+        right: 50%;
         bottom: -52px;
+        -webkit-transform: translateX(50%);
+                transform: translateX(50%);
         width: 100%;
         color: #5a8c7d;
         display: none;
@@ -198,7 +201,8 @@ main {
   main .map-wrapper {
     width: 58%;
     height: 100%;
-    box-shadow: 0 0 2px rgba(34, 34, 34, 0.5); }
+    box-shadow: 0 0 2px rgba(34, 34, 34, 0.5);
+    margin-bottom: 3em; }
     main .map-wrapper #map {
       height: 100%; }
   @media all and (max-width: 1130px) {
